@@ -1,3 +1,10 @@
+Version [unreleased]
+
+    Slight behaviour change: always use UTF-8, not ISO-8859-1, as default
+    encoding. This was already the case before, but calling get_encoding()
+    (not "set"!) changed the default to ISO-8859-1 as a side effect and this
+    is not done any longer.
+
 Version 0.8.1
 
     Add cpp11.h file missing from 0.8.0 distribution archive.
